feat(routing): expose transfer route qualifiers and PMR pathway penalty
NetworkMapResponse.NetworkTransfer now carries fromLineId / toLineId,
resolved from GTFS from_route_id / to_route_id against the network's
lines. The dedupe key on the backend grew accordingly so a generic
rule and a route-specific rule for the same stop pair coexist.

The Dijkstra route-finder picks the most-specific applicable transfer
per (lineI, lineJ) pair (fall-back order: route-specific > generic >
cheapest). A new pathwayPenaltySeconds option adds extra cost to
implicit interchanges (no transfers.txt entry) — wired through the
PMR toggle so accessibility-aware searches favour explicitly-modelled
interchanges over hidden stair / escalator paths.